Copy the man/info filters from gnome-core so I can start modifying them as
Copy the man/info filters from gnome-core so I can start modifying them as needed.

Make man2html output man: URL's in desired format.

Install the page mapping file.

Use it for info pages as well as man pages.

Don't expand tree by default.

--- a/src/man2html/README
+++ b/src/man2html/README
@@ -1,10 +1,14 @@
-gnome-man2html
+gnome-man2html2
 --------------
+
+Modified version of gnome-man2html2 by Elliot Lee <sopwith@redhat.com>
+- slight changes made to the man: URL's output, but otherwise it works
+perfectly.
 
 Modified version of VH-Man2html by Michael Fulbright <msf@redhat.com>
 
 Please do not contact the individuals below if you have problems with
-gnome-man2htm, instead send me an email and I'll try to help.
+gnome-man2html2, instead send me an email and I'll try to help.
 
 The README for the original program lies below...
 
