--- a/TODO
+++ b/TODO
@@ -4,7 +4,7 @@
 
 * Create the tree out of information from the system
 
-* Read/Parse information from Scrollkeeper
+* Read/Parse TOC from Scrollkeeper
  
 * Support links, start webrowser for out-of-help-links...
 
