- removed the uri-entry - added a toolbar
2001-12-01  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-window.c (yelp_window_populate):
	- removed the uri-entry
	- added a toolbar

	* TODO: updated.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2001-12-01  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/yelp-window.c (yelp_window_populate): 
+	- removed the uri-entry
+	- added a toolbar
+
 	* TODO: updated.
 
 	* src/scrollkeeper-parser.c:
