--- a/TODO
+++ b/TODO
@@ -17,6 +17,10 @@
 
 * Nice start page. (TOC?)
 
+* History support:
+  (I have code for this from DevHelp which should be easy enough to
+   bring over).  
+
+* Bookmark support
+
 * more?...
-
-
