--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
+FEATURES:
+---------
+
 * Index-search (keyword search). I've been told that ScrollKeeper CVS
   has support for this, it should be used in Yelp.
 
@@ -22,5 +25,12 @@
    bring over).  
 
 * Bookmark support
+
+
+INTERNALS:
+----------
+
+Clean up the code, I thought a little bigscale in the beginning, no
+time for this. Will be cleaning up a lot in the near future.
 
 * more?...
