--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2001-12-01  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/scrollkeeper-parser.c:
+	(sp_parse_toc_section): prepend ? to the anchor and chomp it.
+
+	* src/yelp-view.c (yelp_view_open_uri): open the anchor if
+  	  present.
+
+	* src/yelp-window.c: removed comments left from the removal of
+	  the uri-entry.
+	
 2001-12-01  Richard Hult  <rhult@codefactory.se>
 
 	* src/main.c (main): Exit when the window is closed.
