--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-03  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* wa.po: Added Walloon file
+
 2001-12-03  Yuriy Syrota  <rasta@renome.rovno.ua>
 
 	* uk.po: Added Ukrainian translation.
