Fixing the build ...
2001-12-04  Malcolm Tredinnick <malcolm@commsecure.com.au>
	* Replace yelp-book.c with yelp-section.c in POTFILES.in

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,6 @@
+2001-12-04  Malcolm Tredinnick <malcolm@commsecure.com.au>
+	* Replace yelp-book.c with yelp-section.c in POTFILES.in
+
 2001-12-03  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* wa.po: Added Walloon file
