removed, old junk
2001-12-04  Mikael Hallendal  <micke@codefactory.se>

	* src/ghelp-uri.[ch]: removed, old junk

	* src/ghelp-main.[c]: likewise

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2001-12-04  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/ghelp-uri.[ch]: removed, old junk
+
+	* src/ghelp-main.[c]: likewise
+
 	* src/yelp-window.c:
 	(yelp_window_populate): connect the history buttons.
 	(yelp_window_history_button_pressed): added/impl.
