--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-04  Carlos Perelló Marín <carlos@gnome-db.org>
+
+	* POTFILES.in: Removed missing files.
+
 2001-12-04  Malcolm Tredinnick <malcolm@commsecure.com.au>
 	* Replace yelp-book.c with yelp-section.c in POTFILES.in
 
