Added German translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-04  Christian Meyer  <chrisime@gnome.org>
+
+	* de.po: Added German translation.
+
 2001-12-04  Carlos Perelló Marín <carlos@gnome-db.org>
 
 	* POTFILES.in: Removed missing files.
