Added 'de' to ALL_LINGUAS

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-04  Christian Meyer  <chrisime@gnome.org>
+
+	* configure.in: Added "de" entry to ALL_LINGUAS.
+
 2001-12-04  Malcolm Tredinnick <malcolm@commsecure.com.au>
 	* src/yelp-window.c:
 	remove obsolete include of ghelp-uri.h.
