--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-08  Mikael Hallendal  <micke@codefactory.se>
+
+	* POTFILES.in: updated
+
 2001-12-07  Mikael Hallendal  <micke@codefactory.se>
 
 	* POTFILES.in: replaced yelp-view.c with yelp-doc-view.c
