--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2001-12-08  Mikael Hallendal  <micke@codefactory.se>
 
+	* TODO (FEATURES): updated.
+
 	* src/yelp-util.c: removed the outcommented menu-code.
 	- No menu will be used, only the toolbar. 
 	- The window-generating code should probably be moved to glade
