--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-08  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+	* POTFILES.in: Sorted.
+
 2001-12-08  Mikael Hallendal  <micke@codefactory.se>
 
 	* POTFILES.in: updated
