--- a/TODO
+++ b/TODO
@@ -27,6 +27,7 @@ FEATURES:
 
 * Recently viewed
 
+* Start with factory, if already activated and running, open new window.
 
 INTERNALS:
 ----------
