--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-09  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* configure.in: Added "az" entry to ALL_LINGUAS.
+
 2001-12-09  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-view-home.c: added, will be the Home-view.
