--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-09  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* az.po: Added Azeri file
+
 2001-12-09  Mikael Hallendal  <micke@codefactory.se>
 
 	* POTFILES.in: updated
