--- a/TODO
+++ b/TODO
@@ -29,9 +29,9 @@ FEATURES:
 
 * Start with factory, if already activated and running, open new window.
 
-INTERNALS:
-----------
-Clean up the code, I thought a little bigscale in the beginning, no
-time for this. Will be cleaning up a lot in the near future.
+* Icons needed:
+  - Contents
+  - Recently viewed
+  - Bookmarks
 
-* more?...
+* Add tooltips for the toolbar
